--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "discord.io": "^2.5.3",
     "discord.js": "^11.4.2",
+    "google-spreadsheet": "^2.0.7",
     "googleapis": "^27.0.0",
     "winston": "^3.1.0"
   },
